fix(style): remove letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,11 +79,9 @@ img {
 .card h1 {
   padding: 0 1rem;
   font-size: 1.375rem;
-  letter-spacing: 0.115px;
 }
 
 .card p {
   margin: 1rem 0 1.5rem 0;
   padding: 0 1rem;
-  letter-spacing: 0.013em;
 }
